--- a/Race/Dz7(4)/Base.lproj/Main.storyboard
+++ b/Race/Dz7(4)/Base.lproj/Main.storyboard
@@ -7,11 +7,6 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="GothamPro-Medium.ttf">
-            <string>GothamPro-Medium</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -21,22 +16,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="test game 1.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tmS-3q-gpw">
-                                <rect key="frame" x="131" y="830" width="166" height="15.333333333333371"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="166" id="wMl-nr-PYx"/>
-                                    <constraint firstAttribute="height" constant="15.33" id="zhY-bn-jv5"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="GothamPro-Medium" family="Gotham Pro" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WfJ-CN-jdo">
-                                <rect key="frame" x="149" y="457" width="131" height="99"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="131" id="9PN-Le-O4T"/>
-                                    <constraint firstAttribute="height" constant="99" id="uyR-is-Nyy"/>
-                                </constraints>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WfJ-CN-jdo">
+                                <rect key="frame" x="166" y="432" width="119" height="99"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Play" image="play"/>
                                 <connections>
                                     <action selector="onPlayButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jby-Ux-jVg"/>
@@ -45,22 +27,43 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="tmS-3q-gpw" firstAttribute="top" secondItem="WfJ-CN-jdo" secondAttribute="bottom" constant="274" id="J8e-vD-n7n"/>
-                            <constraint firstItem="tmS-3q-gpw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="131" id="X6x-od-L3o"/>
-                            <constraint firstItem="tmS-3q-gpw" firstAttribute="top" secondItem="WfJ-CN-jdo" secondAttribute="bottom" constant="274" id="XBx-yd-f9y"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tmS-3q-gpw" secondAttribute="trailing" constant="131" id="a5j-ie-OfO"/>
-                            <constraint firstItem="WfJ-CN-jdo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="149" id="af1-Lf-rP8"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WfJ-CN-jdo" secondAttribute="trailing" constant="148" id="lTN-Ks-piJ"/>
-                            <constraint firstItem="WfJ-CN-jdo" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="369" id="tRb-mg-SzO"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="tmS-3q-gpw" secondAttribute="bottom" constant="46.670000000000002" id="ydo-Fn-o7V"/>
-                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="cZe-mu-CGm"/>
+                    <navigationItem key="navigationItem" id="cZe-mu-CGm">
+                        <barButtonItem key="leftBarButtonItem" title="Item" image="text.justify" catalog="system" id="ERA-K4-Ufc">
+                            <connections>
+                                <segue destination="37K-cM-Hlm" kind="show" id="fMG-Vg-zqd"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-186.44859813084111" y="68.682505399568043"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="0xq-IK-Me7">
+            <objects>
+                <viewController id="37K-cM-Hlm" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dXS-6l-Zob">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Noi-Ob-gMN">
+                                <rect key="frame" x="112" y="100" width="194" height="63"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="GeezaPro" family="Geeza Pro" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="hWd-fA-gLs"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="elx-0g-fNz"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aGC-G0-c8Z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="735.98130841121485" y="68.682505399568043"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="JEO-Te-Zjh">
@@ -81,6 +84,7 @@
     </scenes>
     <resources>
         <image name="play" width="512" height="512"/>
+        <image name="text.justify" catalog="system" width="128" height="100"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
